kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: live-service
spec:
  selector:
    app: live
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
