kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eddiehub-live-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "live.eddiehub.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eddiehub-live-service
                port:
                  number: 5000
    - host: "live.eddiehub.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eddiehub-live-service
                port:
                  number: 5000
